--- a/modelo.html
+++ b/modelo.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMC</title>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="estilo/style.css">
 </head>
-
 <body>
   <h1>
     Calcular o IMC
@@ -22,20 +21,11 @@
   <input id="altura" type="number">
   <button onclick="verificar()">Verificar</button>  
 <h2 id="resultado"></h2>
-<div>
-  <img src="bugdroid.png" alt="efeito">
-  <img src="dan-droids-pq.png" alt="efeito">
-  <img src="img-650.jpg" alt="efeito">
+<div> <!--Testes-->
+  <img src="imagens/bugdroid.png" alt="efeito">
+  <img src="imagens/dan-droids-pq.png" alt="efeito">
+  <img src="imagens/img-650.jpg" alt="efeito">
 </div>
-    <script>
-function verificar() {
-  var peso = document.getElementById("peso").value;
-  var altura = document.getElementById("altura").value;
-  var res = document.getElementById("resultado");
-  var imc = peso / altura ** 2;
-  var imc2 = imc.toFixed(2);
-  res.innerHTML = "imc: " + imc2;
-}
-</script>
+    <script src="javaScript/dev.js"></script>
 </body>
 </html>
