atualizações no projeto

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <h1>Calcular o IMC</h1>
       <h2>Descubra se você está no peso ideal!</h2>
       <h2>Peso ideal: IMC entre 18,5 e 25</h2>
-      <p>Insira seu peso (kg):</p>
+      <p>Insira seu peso (kg): <input id="peso" type="number" placeholder="Exemplo 80kg"></p>
 
-      <input id="peso" type="number" placeholder="Exemplo 80">
-      <p>Insira sua altura (m):</p>
+      <p>Insira sua altura (m): <input id="altura" type="number" placeholder="Exemplo 1.6m"></p>
 
-      <input id="altura" type="number" placeholder="Exemplo 1.6">
       <button onclick="verificar()">Verificar</button>  
       <h2 id="resultado"></h2>
 
